same thing done in JobSeekerService